test/org/midica/testfiles/failing/call-without-name.midica
INCLUDE inc/instruments.midica

CALL